--- a/src/app.css
+++ b/src/app.css
@@ -28,4 +28,34 @@ body {
 	overflow: hidden;
 	padding: 0;
 	margin: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9;
+	color: #FFF;
+	text-transform: uppercase;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Blender Pro';
+	/* background-color: #000; */
+	/* mix-blend-mode: multiply; */
+}
+
+h1 {
+    font-size: 96px;
+    max-width: 900px;
+    text-align: center;
 }
